--- a/mean/public/assets/i18n/locale-gb.json
+++ b/mean/public/assets/i18n/locale-gb.json
@@ -866,5 +866,8 @@
 	"COURSE.SORTBYNAME.AZ": "Sort by name from a to z",
 	"COURSE.SORTBYNAME.ZA": "Sort by name from z to a",
 	"COURSE.SORTBYDATE": "Sort by course start date",
-	"ALERT.COURSE.LOCK": "Function is locked!"
+	"ALERT.COURSE.LOCK": "Function is locked!",
+	"ACTION.SCORM_FULL": "View as full screen",
+  "SELECT.ORDER_BY": "Sort by...",
+  "ALERT.CONFIRM_DELETE": "Do you want to delete?"
 }
