--- a/mean/public/assets/i18n/locale-vn.json
+++ b/mean/public/assets/i18n/locale-vn.json
@@ -864,38 +864,38 @@
 	"COURSE.SORTBYNAME.ZA": "Sắp xếp theo tên z đến a",
 	"COURSE.SORTBYDATE": "Săp xếp theo ngày bắt đầu khóa học",
 	"ALERT.COURSE.LOCK": "Chức năng đang bị khóa!",
-  "Achievement": "Thành tích",
-  "Annoucement": "Thông báo",
-  "Answer": "Câu trả lời",
+  "Achievement": "Quản lý thành tích",
+  "Annoucement": "Quản lý thông báo",
+  "Answer": "Quản lý câu trả lời",
   "Attempt": "Cố gắng",
-  "Candidate": "Ứng viên",
-  "Certificate": "Chứng chỉ",
-  "CertificateTemplates": "Mẫu chứng chỉ",
-  "Classroom": "Phòng học",
-  "Competencie": "Năng lực",
-  "Course": "Khóa học",
-  "Edition": "Phiên bản",
-  "Exam": "Thi",
-  "Exercise": "Bài tập về nhà",
-  "Feedback": "Phản hồi",
-  "Forum": "Diễn đàn",
-  "Group": "Nhóm",
-  "Material": "Vất chất",
-  "Media": "Đa phương tiện",
-  "Member": "Học viên",
-  "Message": "Tin nhắn",
-  "Option": "Tùy chọn",
-  "Post": "Đăng bài",
-  "Practice": "Thực hành",
-  "Program": "Chương trình",
-  "ProgramMember": "Thành viên trong chương trình",
-  "Question": "Câu hỏi",
-  "Schedule": "Lịch trình",
-  "Scheme": "Kế hoạch",
-  "Section": "Lựa chọn",
+  "Candidate": "Quản lý ứng viên",
+  "Certificate": "Quản lý chứng chỉ",
+  "CertificateTemplates": "Quản lý mẫu chứng chỉ",
+  "Classroom": "Quản lý phòng học",
+  "Competencie": "Đánh giá năng lực",
+  "Course": "Quản lý khóa học",
+  "Edition": "Quản lý phiên bản",
+  "Exam": "Quản lý kỳ thi",
+  "Exercise": "Quản lý bài tập về nhà",
+  "Feedback": "Quản lý phản hồi",
+  "Forum": "Quản lý diễn đàn",
+  "Group": "Quản lý sơ đồ tổ chức",
+  "Material": "Quản lý vật liệu",
+  "Media": "Quản lý đa phương tiện",
+  "Member": "Quản lý người dùng",
+  "Message": "Quản lý tin nhắn",
+  "Option": "Quản lý tùy chọn",
+  "Post": "Quản lý bài đăng",
+  "Practice": "Quản lý thực hành",
+  "Program": "Quản lý chương trình",
+  "ProgramMember": "Quản lý thành viên trong chương trình",
+  "Question": "Quản lý câu hỏi",
+  "Schedule": "Quản lý lịch trình",
+  "Scheme": "Quản lý kế hoạch",
+  "Section": "Quản lý lựa chọn",
   "Setting": "Cài đặt",
-  "Submission": "Phân quyền",
-  "Topic": "Đề tài",
+  "Submission": "Quản lý phân quyền",
+  "Topic": "Quản lý đề tài",
 	"ACTION.SCORM_FULL": "Xem toàn màn hình",
   "SELECT.ORDER_BY": "Sắp xếp theo...",
   "ALERT.CONFIRM_DELETE": "Bạn chắc chắn muốn xóa?"
