Add section permission to selection

--- a/mean/public/assets/i18n/locale-vn.json
+++ b/mean/public/assets/i18n/locale-vn.json
@@ -892,7 +892,7 @@
   "Question": "Quản lý câu hỏi",
   "Schedule": "Quản lý lịch trình",
   "Scheme": "Quản lý kế hoạch",
-  "Section": "Quản lý lựa chọn",
+  "Section": "Quản lý bài học",
   "Setting": "Cài đặt",
   "Submission": "Quản lý phân quyền",
   "Topic": "Quản lý đề tài",
