Add course copy function

--- a/mean/public/assets/i18n/locale-gb.json
+++ b/mean/public/assets/i18n/locale-gb.json
@@ -356,6 +356,7 @@
 	"ACTION.HAND_UP":"Raise hand",
 	"ACTION.HAND_DOWN":"Low hand",
 	"ACTION.CONNECT":"Connect",
+  "ACTION.COPY": "Copy",
 	"ACTION.SIGN_IN": "Sign In",
 	"ACTION.SELECT": "Select",
 	"ACTION.SIGN_UP": "Registration",
