Add profile user

--- a/mean/public/assets/i18n/locale-gb.json
+++ b/mean/public/assets/i18n/locale-gb.json
@@ -17,6 +17,9 @@
 	"PAGE.AUTHENTICATION.VERIFY_PASSWORD": "Verify New Password",
 	"PAGE.PROFILE.BASIC": "Basic Information",
 	"PAGE.PROFILE.COMPANY": "Company Information",
+	"PAGE.PROFILE.GROUP": "Group Information",
+	"PAGE.PROFILE.LEVEL":"Level",
+	"PAGE.PROFILE.FAMILY":"Family",
 	"PAGE.PROFILE.SOCIAL_ACCOUNT": "Social Network",
 	"PAGE.PROFILE.CHANGE_PASS": "Change Password",
 	"PAGE.PROFILE.GENERAL_INFO": "General Information",
@@ -583,6 +586,22 @@
 	"MODEL.USER.TWITTER": "Twitter",
 	"MODEL.USER.MALE": "Male",
 	"MODEL.USER.FEMALE": "Female",
+	"MODEL.USER.CURRENT_ADDRESS": "Current address",
+	"MODEL.USER.CONTACT_PERSON": "Contact person",
+	"MODEL.USER.RESIDENCE_ADDRESS": "Residence address",
+	"MODEL.USER.PLACE_OF_REGISTER": "Place of register",
+	"MODEL.USER.ETHNIC": "Ethnicity",
+	"MODEL.USER.RELIGION": "Religion",
+	"MODEL.USER.SOCIAL_ID": "Social Security ID",
+	"MODEL.USER.FAMILY_NORM": "Family class",
+	"MODEL.USER.ACADEMIC_ASSESSMENT": "Academic assessment",
+	"MODEL.USER.PERSONALITY_ASSESSMENT": "Personality assessment",
+	"MODEL.USER.GRADUATE_ASSESSMENT": "Graduate assessment",
+	"MODEL.USER.GRADUATE_RANK": "Graduate rank",
+	"MODEL.USER.FATHER": "Father",
+	"MODEL.USER.MOTHER": "Mother",
+	"MODEL.USER.SPOUSE": "Spouse",
+	"MODEL.USER.SIBLING": "Sibling",
 	"MODEL.MEMBER.MEMBER": "Members",
 	"MODEL.PERMISSION_VIEW.NAME": "Name",
 	"MODEL.PERMISSION_VIEW.USER_MENU": "User menu",
@@ -787,7 +806,7 @@
 	"ERROR.COURSE_REGISTER.CHOOSE_CLASS": "Please select the online class of the course",
 	"ERROR.COURSE_FORUM_UNAVAILABLE": "Course forum unavailable",
 	"ERROR.GROUP_EDIT.REMOVE_UNEMPTY_ORG_GROUP": "Cannot delete the department contain member",
-	"ERROR.USER_EDIT.EMPTY_ORG_GROUP": "Not yet choose the department",
+	"ERROR.USER_EDIT.EMPTY_ORG_GROUP": "Not yet choose the group",
 	"ERROR.LIBRARY.REMOVE_UNEMPTY_LIBRARY_GROUP": "Cannot delete content section",
 	"ERROR.LIBRARY.EMPTY_LIBRARY_GROUP": "Not yet choose the section",
 	"ERROR.COURSE.REMOVE_UNEMPTY_COURSE_GROUP": "Cannot empty the course group",
