--- a/mean/public/assets/i18n/locale-vn.json
+++ b/mean/public/assets/i18n/locale-vn.json
@@ -17,6 +17,9 @@
 	"PAGE.AUTHENTICATION.VERIFY_PASSWORD": "Xác nhận mật khẩu mới",
 	"PAGE.PROFILE.BASIC": "Thông tin cơ bản",
 	"PAGE.PROFILE.COMPANY": "Thông tin công ty",
+	"PAGE.PROFILE.GROUP": "Phân hệ",
+	"PAGE.PROFILE.LEVEL":"Trình độ",
+	"PAGE.PROFILE.FAMILY":"Gia đình",
 	"PAGE.PROFILE.SOCIAL_ACCOUNT": "Mạng xã hội",
 	"PAGE.PROFILE.CHANGE_PASS": "Thay đổi mật khẩu",
 	"PAGE.PROFILE.GENERAL_INFO": "Thông tin chung",
@@ -580,6 +583,22 @@
 	"MODEL.USER.TWITTER": "Twitter",
 	"MODEL.USER.MALE": "Nam",
 	"MODEL.USER.FEMALE": "Nữ",
+	"MODEL.USER.CURRENT_ADDRESS": "Địa chỉ hiện tại",
+	"MODEL.USER.CONTACT_PERSON": "Người liên hệ",
+	"MODEL.USER.RESIDENCE_ADDRESS": "Hộ khẩu thường trú",
+	"MODEL.USER.PLACE_OF_REGISTER": "Nơi đăng ký",
+	"MODEL.USER.ETHNIC": "Dân tộc",
+	"MODEL.USER.RELIGION": "Tôn giáo",
+	"MODEL.USER.SOCIAL_ID": "CMT",
+	"MODEL.USER.FAMILY_NORM": "Thành phần gia đình",
+	"MODEL.USER.ACADEMIC_ASSESSMENT": "Đánh giá học lực",
+	"MODEL.USER.PERSONALITY_ASSESSMENT": "Đánh giá hạnh kiểm",
+	"MODEL.USER.GRADUATE_ASSESSMENT": "Đánh giá tốt nghiệp",
+	"MODEL.USER.GRADUATE_RANK": "Xếp loại tốt nghiệp",
+	"MODEL.USER.FATHER": "Bố",
+	"MODEL.USER.MOTHER": "Mẹ",
+	"MODEL.USER.SPOUSE": "Vợ/chồng",
+	"MODEL.USER.SIBLING": "Anh chị em",
 	"MODEL.PERMISSION_VIEW.NAME": "Tên",
 	"MODEL.PERMISSION_VIEW.USER_MENU": "Menu người dùng",
 	"MODEL.PERMISSION_VIEW.ADMIN_MENU": "Menu quản trị",
@@ -783,7 +802,7 @@
 	"ERROR.COURSE_REGISTER.CHOOSE_CLASS": "Chưa chọn lớp học trực tuyến",
 	"ERROR.COURSE_FORUM_UNAVAILABLE": "Khóa học chưa có chức năng thảo luận",
 	"ERROR.GROUP_EDIT.REMOVE_UNEMPTY_ORG_GROUP": "Không thể xóa phòng ban có nhân viên",
-	"ERROR.USER_EDIT.EMPTY_ORG_GROUP": "Chưa chọn phòng ban",
+	"ERROR.USER_EDIT.EMPTY_ORG_GROUP": "Chưa chọn phân hệ",
 	"ERROR.LIBRARY.REMOVE_UNEMPTY_LIBRARY_GROUP": "Không thể xóa danh mục có nội dung",
 	"ERROR.LIBRARY.EMPTY_LIBRARY_GROUP": "Chưa chọn danh mục",
 	"ERROR.COURSE.REMOVE_UNEMPTY_COURSE_GROUP": "Không thể xóa danh mục có khóa học",
